<resources>
    <string name="app_name">Bomb Locator</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="start_game">Start Game!</string>
    <string name="about">About</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="game_options">Game Options</string>
    <string name="amount_of_bombs">Amount of Bombs</string>
    <string name="board_size">Board Size</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="back_options">Back</string>
    <string name="save_options">Save Options</string>
    <string name="win_highscore">Congratulations!\nNew high score!</string>
    <string name="OK">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="resetConfirmation">Are you sure you want to reset progress?</string>
    <string name="win_nohighscore">Congratulations! You win!</string>
    <string name="highscore">Highscore:</string>
    <string name="remote_defusers_used">Area Scans Used:</string>
    <string name="highscore_none">None</string>
    <string name="about_the_game">About the Game</string>
    <string name="link_text"><b>About the Authors:</b> This game was made by two SFU students,
        namely, the bearded man Paul Allan, and the small man Kenney Wu. The game was developed for our
        CMPT276 class, taught by Professor Brian Fraser. More information about the class can be found
        at http://www.cs.sfu.ca/CourseCentral/276/bfraser/index.html.</string>
    <string name="about_the_game_really"><b>About the Game (Really):</b> In this game, your task
        is to locate every bomb in the bombfield.
        When you begin the game, you will see a grid of possible search locations.
        When you select an empty location, there are two possible outcomes. If there is no bomb
        in the selected location, a scan result will appear. The scan result tells you how many bombs are in the same row or column,
        as the location you searched. If there is a bomb, the bomb will be revealed. If you decide to
        search the location of a revealed bomb, a scan result will appear. Every time a scan result
        or bomb is revealed it will count as an action. Try to win in as few actions as possible!</string>
    <string name="games_played">Games Played:</string>
    <string name="bombs_to_find">Bombs: %1$d of %2$d</string>
    <string name="bombcitation">Picture of bomb used under LGPL licence: https://commons.wikimedia.org/wiki/Crystal_Clear#/media/File:Crystal_Clear_app_core.png</string>
    <string name="starcitation">Picture of star used under LGPL license: https://commons.wikimedia.org/wiki/Crystal_Clear#/media/File:Crystal_Clear_action_bookmark.png</string>
    <string name="bfrasercitation">Background images using Image Files 4 and 34 from Brian Fraser\'s Photo Library: http://www.cs.sfu.ca/CourseCentral/276/bfraser/solutions/images/Images/</string>
    <string-array name="board_sizes">
        <item>4 x 6</item>
        <item>5 x 10</item>
        <item>6 x 15</item>
    </string-array>
    <string-array name="bomb_amounts">
        <item>6 bombs</item>
        <item>10 bombs</item>
        <item>15 bombs</item>
        <item>20 bombs</item>
    </string-array>
</resources>
