<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.sfu.epsilon.bomblocator.AboutScreen">

    <TextView
        android:text="@string/about_the_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/HelpScreenTitle"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:elevation="5dp"
        tools:elevation="5dp" />

    <TextView
        android:text="@string/link_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hyperlink"
        android:textSize="12sp"
        android:autoLink="all"
        android:layout_below="@+id/HelpScreenTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/green"
        android:elevation="5dp"
        tools:elevation="5dp" />

    <TextView
        android:text="@string/about_the_game_really"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realgamedescriptitle"
        android:layout_below="@+id/hyperlink"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:textSize="12sp"
        android:textColor="@color/green"
        android:elevation="5dp"
        tools:elevation="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/image34"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/aboutbImage"
        android:alpha="0.5"
        android:elevation="0dp"
        tools:elevation="0dp" />

    <Button
        android:text="@string/back_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/aboutbackbutton" />

    <TextView
        android:text="Citations:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/citations"
        android:layout_below="@+id/realgamedescriptitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/green" />

    <TextView
        android:text="@string/bombcitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/citations"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bombcitation"
        android:autoLink="all"
        android:textColor="@color/green"
        android:textSize="12sp" />

    <TextView
        android:text="@string/starcitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bombcitation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/starcitation"
        android:autoLink="all"
        android:textSize="12sp"
        android:textColor="@color/green" />

    <TextView
        android:text="@string/bfrasercitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/starcitation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/bfrasercitations"
        android:autoLink="all"
        android:textSize="12sp"
        android:textColor="@color/green" />

</RelativeLayout>
