<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/titleMainMenu"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        tools:elevation="5dp" />

    <Button
        android:text="@string/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleMainMenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/btnStartGame" />

    <Button
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSettings"
        android:layout_alignLeft="@+id/btnSettings"
        android:layout_alignStart="@+id/btnSettings"
        android:layout_marginTop="10dp"
        android:id="@+id/btnAbout" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/btnSettings"
        android:layout_below="@+id/btnStartGame"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/image4"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/aboutbImage"
        android:alpha="0.5"
        android:elevation="0dp"
        tools:elevation="0dp" />
</RelativeLayout>
